--- a/templates/user_login.html
+++ b/templates/user_login.html
@@ -3,9 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <title>注册与登陆</title>
+    <link rel="stylesheet" href="/static/css/pure-min.css">
 </head>
 <body>
-    <form action="/user/register" method="post">
+    <form class="center" action="/user/register" method="post">
         <input type="text" name="username" placeholder="请输入用户名">
         <br>
         <input type="text" name="password" placeholder="请输入密码">
@@ -16,7 +17,7 @@
         <input type="text" name="username" placeholder="请输入用户名">
         <br>
         <input type="text" name="password" placeholder="请输入密码">
-        <button>登陆</button>
+        <button class="pure-button pure-button-primary" >登陆</button>
     </form>
 </body>
 </html>
