--- a/templates/timeline.html
+++ b/templates/timeline.html
@@ -4,22 +4,61 @@
     <meta charset="UTF-8">
     <title>时间线</title>
     <link rel="stylesheet" href="/static/css/pure-min.css">
+    <style>
+        .center {
+            width: 300px;
+            margin:20px auto;
+        }
+        .comments-style {
+            font-family: Tahoma,Helvetica,Arial,'华文行楷',sans-serif;
+            color: darkgray;
+        }
+        .weibos-style {
+            font-family: Tahoma,Helvetica,Arial,'微软雅黑',sans-serif;
+            color: #a455d4;
+        }
+        form {
+            width: 1000px;
+        }
+        input {
+            width: 345px;
+            float: left;
+        }
+        button {
+            float: left;
+            margin-left: 9px;
+        }
+        .weibo-single {
+            margin-top: 30px;
+        }
+        .clearfix::after {
+            content: '';
+            display: block;
+            clear: both;
+        }
+    </style>
 </head>
 <body>
-    <form action="/weibo/add" method="post">
-        <input  name="content">
-        <br>
-        <button class="pure-button pure-button-primary">发微博</button>
-    </form>
-    {% for w in weibos %}
-        <div>
-            {{ w.content }} @ {{ w.created_time }}
-            <form action="/comment/add" method="post">
-                <input type="hidden" name="weibo_id" value="{{ w.id }}">
-                <input type="text" name="content">
-                <button class="pure-button pure-button-primary">评论</button>
-            </form>
-        </div>
-    {% endfor %}
+    <div class="center">
+        <form class="pure-form clearfix" action="/weibo/add" method="post">
+            <input  name="content">
+            <button class="pure-button pure-button-primary">发微博</button>
+        </form>
+        {% for w in weibos %}
+            <div class="weibo-single">
+                <div class="weibos-style">
+                    {{ w.content }} @ {{ w.created_time }}
+                </div>
+                {% for c in comments %}
+                    <div class="comments-style">{{ c.content }} @ {{ c.created_time }}</div>
+                {% endfor %}
+                <form class="pure-form clearfix" action="/weibo/comment" method="post">
+                    <input type="hidden" name="weibo_id" value="{{ w.id }}">
+                    <input type="text" name="content">
+                    <button class="pure-button pure-button-primary">评论</button>
+                </form>
+            </div>
+        {% endfor %}
+    </div>
 </body>
 </html>
