--- a/templates/todo_index.html
+++ b/templates/todo_index.html
@@ -40,7 +40,7 @@
                 <td>{{ t.id }}</td>
                 <td>{{ t.task }}</td>
                 <td>{{ t.created_time }}</td>
-                <!--url_for 可以传递参数，先匹配动态路由，如果动态路由匹配失败则变成 query 参数-->
+                <!--url_for 可以传递参数的，先匹配动态路由，如果动态路由匹配失败则变成 query 参数-->
                 <td><a href="{{ url_for('todo.delete', todo_id=t.id) }}">delete</a></td>
             </tr>
         {% endfor %}
