--- a/templates/timeline.html
+++ b/templates/timeline.html
@@ -3,62 +3,141 @@
 <head>
     <meta charset="UTF-8">
     <title>时间线</title>
-    <link rel="stylesheet" href="/static/css/pure-min.css">
+    <script src="http://cdn.bootcss.com/jquery/3.1.0/jquery.min.js"></script>
+
     <style>
-        .center {
-            width: 300px;
-            margin:20px auto;
+        body {
+            font-size: 20px;
         }
-        .comments-style {
-            font-family: Tahoma,Helvetica,Arial,'华文行楷',sans-serif;
-            color: darkgray;
+        input, button {
+            font-size: 15px;
         }
-        .weibos-style {
-            font-family: Tahoma,Helvetica,Arial,'微软雅黑',sans-serif;
-            color: #a455d4;
+        .post-weibo {
+            margin-left: 0px;
+            margin-top: 5px;
+            margin-bottom: 5px;
         }
-        form {
-            width: 1000px;
+        .gua-weibo-cell {
+            border-radius: 5px;
+            border-style: solid;
+            border-color: #aba9a9;
+            margin: 10px 5px;
+            padding: 5px;
+            background: #1d52ef;
+        }
+        .gua-weibo-content {
+            background: white;
+            padding: 10px;
+            border-radius: 5px;
+        }
+        .gua-comment-list {
+            background: white;
+            border-radius: 5px;
+            border-style: solid;
+            /* border-color: white; */
+            padding: 5px;
+            border: 0;
+            margin: 10px 0;
+        }
+        .gua-comment-cell {
+            padding: 5px;
+        }
+        .gua-comment-cell + .gua-comment-cell {
+            border-top-style: solid;
+            border-top-width: 2px;
+            border-top-color: lightgray;
+        }
+        .gua-comment-list:nth-child(0) {
+            background: red;
         }
         input {
-            width: 345px;
-            float: left;
+            outline: none;
+            border: none;
+            background: white;
+            border-radius: 5px;
+            height: 30px;
+            padding: 0 10px;
         }
         button {
-            float: left;
-            margin-left: 9px;
-        }
-        .weibo-single {
-            margin-top: 30px;
-        }
-        .clearfix::after {
-            content: '';
-            display: block;
-            clear: both;
+            border: none;
+            background: #b7b6ec;
+            height: 30px;
+            border-radius: 5px;
+            width: 100px;
         }
     </style>
+    <script>
+        $(document).ready(function(){
+            $('.gua-comment-add').on('click', function(){
+                console.log('add button')
+                var button = $(this)
+                var parent = button.parent()
+                var weibo_id = parent.find('.gua-comment-weibo_id').val()
+                console.log('weibo', weibo_id)
+                var content = parent.find('.gua-comment-content').val()
+                console.log('content', content)
+
+                var commentList = parent.parent().find('.gua-comment-list')
+                console.log('commentList', commentList)
+
+                var weibo = {
+                    'weibo_id': weibo_id,
+                    'content': content
+                }
+                var request = {
+                    url: '/api/comment/add',
+                    type: 'post',
+                    data: weibo,
+                    success: function() {
+                        console.log('成功', arguments)
+                        var response = arguments[0]
+                        var comment = JSON.parse(response)
+                        var content = comment.content
+                        var cell = `
+                            <div class="gua-comment-cell">
+                                ${content}
+                            </div>
+                        `;
+                        commentList.append(cell)
+
+                    },
+                    error: function() {
+                        console.log('错误', arguments)
+                    }
+                }
+                $.ajax(request)
+            })
+        })
+    </script>
 </head>
 <body>
-    <div class="center">
-        <form class="pure-form clearfix" action="/weibo/add" method="post">
-            <input  name="content">
-            <button class="pure-button pure-button-primary">发微博</button>
-        </form>
-        {% for w in weibos %}
-            <div class="weibo-single">
-                <div class="weibos-style">
-                    {{ w.content }} @ {{ w.created_time }}
-                </div>
-                {% for c in w.comments %}
-                    <div class="comments-style">{{ c.content }} @ {{ c.created_time }}</div>
-                {% endfor %}
-                <form class="pure-form clearfix" action="/weibo/comment" method="post">
-                    <input type="hidden" name="weibo_id" value="{{ w.id }}">
-                    <input type="text" name="content">
-                    <button class="pure-button pure-button-primary">评论</button>
-                </form>
+    <form class="gua-weibo-cell" action="/weibo/add" method="post">
+        <input class="post-weibo" name="content">
+        <br>
+        <button>发微博</button>
+    </form>
+    <div class="gua-weibo-list">
+    {% for w in weibos %}
+        <div class="gua-weibo-cell">
+            <div class="gua-weibo-content">
+            {{ w.content }} @ {{ w.created_time }}
             </div>
-        {% endfor %}
+            <div class="gua-comment-list">
+                {% for c in w.comments %}
+                <div class="gua-comment-cell">
+                    {{ c.content }}
+                </div>
+                {% endfor %}
+            </div>
+            <!--<form action="/comment/add" method="post">-->
+            <div class="gua-comment-form">
+                <input class="gua-comment-weibo_id" type="hidden" name="weibo_id" value="{{ w.id }}">
+                <input class="gua-comment-content" name="content">
+                <button class="gua-comment-add">评论</button>
+            </div>
+                <!--</form>-->
+        </div>
+    {% endfor %}
     </div>
 </body>
 </html>
