--- a/templates/timeline.html
+++ b/templates/timeline.html
@@ -8,9 +8,11 @@
     <style>
         body {
             font-size: 20px;
+            font-family: "Arial","Microsoft YaHei","华文彩云","宋体",sans-serif;
         }
         input, button {
             font-size: 15px;
+            font-family: "Arial","Microsoft YaHei","微软雅黑","宋体",sans-serif;
         }
         .post-weibo {
             margin-left: 0px;
