--- a/templates/timeline.html
+++ b/templates/timeline.html
@@ -3,114 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <title>时间线</title>
-    <script src="http://cdn.bootcss.com/jquery/3.1.0/jquery.min.js"></script>
-
-    <style>
-        body {
-            font-size: 20px;
-            font-family: "Arial","Microsoft YaHei","华文彩云","宋体",sans-serif;
-        }
-        input, button {
-            font-size: 15px;
-            font-family: "Arial","Microsoft YaHei","微软雅黑","宋体",sans-serif;
-        }
-        .post-weibo {
-            margin-left: 0px;
-            margin-top: 5px;
-            margin-bottom: 5px;
-        }
-        .gua-weibo-cell {
-            border-radius: 5px;
-            border-style: solid;
-            border-color: #aba9a9;
-            margin: 10px 5px;
-            padding: 5px;
-            background: #1d52ef;
-        }
-        .gua-weibo-content {
-            background: white;
-            padding: 10px;
-            border-radius: 5px;
-        }
-        .gua-comment-list {
-            background: white;
-            border-radius: 5px;
-            border-style: solid;
-            /* border-color: white; */
-            padding: 5px;
-            border: 0;
-            margin: 10px 0;
-        }
-        .gua-comment-cell {
-            padding: 5px;
-        }
-        .gua-comment-cell + .gua-comment-cell {
-            border-top-style: solid;
-            border-top-width: 2px;
-            border-top-color: lightgray;
-        }
-        .gua-comment-list:nth-child(0) {
-            background: red;
-        }
-        input {
-            outline: none;
-            border: none;
-            background: white;
-            border-radius: 5px;
-            height: 30px;
-            padding: 0 10px;
-        }
-        button {
-            border: none;
-            background: #b7b6ec;
-            height: 30px;
-            border-radius: 5px;
-            width: 100px;
-        }
-    </style>
-    <script>
-        $(document).ready(function(){
-            $('.gua-comment-add').on('click', function(){
-                console.log('add button')
-                var button = $(this)
-                var parent = button.parent()
-                var weibo_id = parent.find('.gua-comment-weibo_id').val()
-                console.log('weibo', weibo_id)
-                var content = parent.find('.gua-comment-content').val()
-                console.log('content', content)
-
-                var commentList = parent.parent().find('.gua-comment-list')
-                console.log('commentList', commentList)
-
-                var weibo = {
-                    'weibo_id': weibo_id,
-                    'content': content
-                }
-                var request = {
-                    url: '/api/comment/add',
-                    type: 'post',
-                    data: weibo,
-                    success: function() {
-                        console.log('成功', arguments)
-                        var response = arguments[0]
-                        var comment = JSON.parse(response)
-                        var content = comment.content
-                        var cell = `
-                            <div class="gua-comment-cell">
-                                ${content}
-                            </div>
-                        `;
-                        commentList.append(cell)
-
-                    },
-                    error: function() {
-                        console.log('错误', arguments)
-                    }
-                }
-                $.ajax(request)
-            })
-        })
-    </script>
+    <link rel="stylesheet" href="/static/css/timeline.css">
+    <script src="/static/js/jquery.js"></script>
+    <script src="/static/js/timeline.js"></script>
 </head>
 <body>
     <form class="gua-weibo-cell" action="/weibo/add" method="post">
